--- a/index.html
+++ b/index.html
@@ -21,22 +21,28 @@
         <p>You can now listen to millions of songs,<br>
            audiobooks, and podcasts on any device <br>
             anywhere you like!</p>
+        
           <section class="plans">
-            Annual Plan <br> <span> $59.99/year</span>
-            <a href="#" class="plans-link">Change</a>
+           <ul>
+             <li>Annual plans <br>
+              <span>$59.99/year</span></li>
+             <li><a href="#">change</a></li>
+           </ul>
           </section>
 
           <P class="payment">
             <button class="proceed">Proceed to Payment</button>
-            <button class="Cancel">Cancel Order</button>
+            <button class="cancel">Cancel Order</button>
           </P>
+          <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="#">muyixone</a>.
+          </div> 
       </div>
-    </div>    
+        
+    </div> 
   </div>
    
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">muyixone</a>.
-  </div>
+  
 </body>
 </html>
