--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="mentor.css">
+  <script src="https://kit.fontawesome.com/7a52a2fb9f.js" crossorigin="anonymous"></script>
   
   <title>Frontend Mentor | Order summary card</title>
 
@@ -23,17 +24,19 @@
             anywhere you like!</p>
         
           <section class="plans">
-           <ul>
-             <li>Annual plans <br>
-              <span>$59.99/year</span></li>
-             <li><a href="#">change</a></li>
-           </ul>
+            <aside>
+              <i class="fas fa-music"><span>Annual plans</span> <br>
+                <span>$59.99/year</span></i>
+
+              <a href="#" class="change">change</a>
+            </aside>
           </section>
 
           <P class="payment">
-            <button class="proceed">Proceed to Payment</button>
-            <button class="cancel">Cancel Order</button>
+            <a href="#" class="proceed">Proceed to Payment</a>
+            <a href="#" class="cancel">Cancel Order</a>
           </P>
+          
           <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
             Coded by <a href="#">muyixone</a>.
