--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             anywhere you like!</p>
         
           <section class="plans">
-            <aside>
-              <i class="fas fa-music"><span>Annual plans</span> <br>
-                <span>$59.99/year</span></i>
+            <div><i class="fas fa-music"></i></div>
+              <aside><span>Annual plans</span> <br>
+                <span>$59.99/year</span></aside>
 
               <a href="#" class="change">change</a>
-            </aside>
+           
           </section>
 
           <P class="payment">
