--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
            
           </section>
 
-          <P class="payment">
+          <aside class="payment">
             <a href="#" class="proceed">Proceed to Payment</a>
             <a href="#" class="cancel">Cancel Order</a>
-          </P>
+          </aside>
           
           <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
